fix z-index slide

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,12 +67,14 @@ img[appImageUpload] {
       position: absolute;
       left: 0;
       right: 0;
+      z-index: -1;
 
       &.active {
         transition: .5s;
         animation-timing-function: cubic-bezier(0.895, 0.03, 0.685, 0.22);
         position: relative;
         opacity: 1;
+        z-index: 2;
       }
     }
   }
